--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,15 @@
 <app-header />
 <main>
-    <ul id="users">
-        <li>
-            <app-user />
-        </li>
-    </ul>
+  <ul id="users">
+    @for (user of users; track user.id) {
+    <li>
+      <app-user [user]="user" (select)="onSelectUser($event)" />
+    </li>
+    }
+  </ul>
+  @if (selectedUser) {
+    <app-task [name]="selectedUser.name"></app-task>
+  } @else {
+    <p id="fallback">Select a user to see thier tasks!</p>
+  }
 </main>
