--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
     }
   </ul>
   @if (selectedUser) {
-    <app-task [name]="selectedUser.name"></app-task>
+    <app-tasks [name]="selectedUser.name"></app-tasks>
   } @else {
     <p id="fallback">Select a user to see thier tasks!</p>
   }
