--- a/src/app/tasks/task/task.component.html
+++ b/src/app/tasks/task/task.component.html
@@ -1,8 +1,8 @@
 <article>
-    <h2>TASK TITLE</h2>
-    <time>TIME</time>
-    <p>SUMMARY</p>
-    <p class="actions">
-        <button>Complete</button>
-    </p>
+  <h2>{{ taskDetails.title }}</h2>
+  <time>{{ taskDetails.dueDate }}</time>
+  <p>{{ taskDetails.summary }}</p>
+  <p class="actions">
+    <button>Complete</button>
+  </p>
 </article>
